wasm/envoy.yaml
static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 18000
      filter_chains:
        - filters:
            - name: envoy.filters.network.wasm
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.wasm.v3.Wasm
                config:
                  vm_config:
                    runtime: "envoy.wasm.runtime.v8"
                    code:
                      local:
                        filename: "./main.wasm"
            - name: envoy.filters.network.rbac
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
                rules:
                  policies:
                    ns[default]-policy[httpbin]-rule[0]:
                      permissions:
                      - andRules:
                          rules:
                          - any: true
#                      condition:
#                        call_expr:
#                          function: startsWith
#                          args:
#                          - select_expr:
#                              operand:
#                                ident_expr:
#                                  name: istio
#                              field: peer_principal
#                          - const_expr:
#                              string_value: spiffe://cluster.local/ns/foo/sa/bar
                      principals:
#                      - andIds:
#                          ids:
#                          - any: true
                      - andIds:
                          ids:
                          - orIds:
                              ids:
                              - filterState:
                                  key: wasm.howardjohn_meta
                                  stringMatch:
                                    exact: spiffe://cluster.local/ns/foo/sa/bar
                statPrefix: tcp.

            - name: envoy.tcp_proxy
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                stat_prefix: ingress
                cluster: dummy
                access_log:
                - name: envoy.access_loggers.stdout
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                    log_format:
                      text_format: "ACCESS LOG: [%FILTER_STATE(wasm.howardjohn_meta:PLAIN)%]\n"
    - name: staticreply
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 8099
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "example body\n"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: dummy
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: mock_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8099
    - name: mds
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: mds
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1 # TODO: replace
                      port_value: 9999

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
